--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+	"echo": "echo first",
+	"echo:second": "echo second"
   },
   "eslintConfig": {
     "extends": "react-app"
