--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,8 @@ environment:
     - echo: echo
     #- echo: echo:second
   
-build: off
+build_script:
+  - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
 
 test_script:
   - npm run %echo%
