--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,9 +4,18 @@ environment:
   matrix:
     - echo: echo
     #- echo: echo:second
-  
-build_script:
+
+build: off
+
+before_deploy:
   - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
+  
+deploy:
+  description: 'Release description'
+  provider: GitHub
+  auth_token:
+    secure: YYaba3dPUneRem8KQzFCQCq7EmhJr9P8egf6Bp6OChFwdCkyQXDsL/ImEPe4rKHN
+  artifact: myArtifact
 
 
 test_script:
