--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,13 +11,14 @@ before_deploy:
   - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
   
 deploy:
+  release: test2
   description: 'Release description'
   provider: GitHub
   auth_token:
     secure: YYaba3dPUneRem8KQzFCQCq7EmhJr9P8egf6Bp6OChFwdCkyQXDsL/ImEPe4rKHN
   artifact: myArtifact
-  on:
-    APPVEYOR_REPO_TAG: true  
+  force_update: true
+
 
 
 test_script:
