--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,12 +10,13 @@ build_script:
   - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
   
 deploy:
+  tag: $(APPVEYOR_REPO_TAG_NAME)
   release: test2
   description: 'Release description'
   provider: GitHub
   auth_token:
     secure: YYaba3dPUneRem8KQzFCQCq7EmhJr9P8egf6Bp6OChFwdCkyQXDsL/ImEPe4rKHN
-  artifact: appveyor.yml
+  artifact: myArtifact
   force_update: true
 
 
