--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ build_script:
   - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
   
 deploy:
+  release: testing
   description: 'Release description'
   provider: GitHub
   auth_token:
