--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,13 +10,15 @@ build_script:
   - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
   
 deploy:
-  release: testing
+  #release: testing
   description: 'Release description'
   provider: GitHub
   auth_token:
     secure: YYaba3dPUneRem8KQzFCQCq7EmhJr9P8egf6Bp6OChFwdCkyQXDsL/ImEPe4rKHN
   artifact: myArtifact
   force_update: true
+  on:
+    APPVEYOR_REPO_TAG: true
 
 
 
