--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,8 +7,10 @@ environment:
     - echo: echo
     #- echo: echo:second
 
-build: off
+#build: off
 before_deploy:
+  - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
+build_script:
   - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
   
 deploy:
