--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,11 +7,11 @@ environment:
     - echo: echo
     #- echo: echo:second
 
-#build: off
-#before_deploy:
- # - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
-build_script:
+build: off
+before_deploy:
   - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
+#build_script:
+ # - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
   
 deploy:
   release: testing
