--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,7 @@ build: off
 install:
   #- cd ../..
   - echo %processor_architecture%
+  - echo %platform%
   - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
 #build_script:
  # - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
