--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ build: off
 install:
   #- cd ../..
   - echo %processor_architecture%
-  - cmd: if (%processor_architecture% == "AMD64") wmic OS get OSArchitecture
+  - cmd: if %processor_architecture% == "AMD64" (wmic OS get OSArchitecture)
 
       
   - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
