--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,12 @@
 version: 1.0.{build}
 
 image: 
-  - Visual studio 2013
+  #- Visual studio 2013
   - Visual studio 2015
   - Visual studio 2017
+platform:
+  - x86
+  - anyCPU
 
 #environment:
  # matrix:
@@ -13,6 +16,7 @@ skip_branch_with_pr: true
 build: off
 install:
   #- cd ../..
+  - echo %platform%
   - echo %processor_architecture%
   - cmd: if %processor_architecture% == AMD64 (wmic OS get OSArchitecture)
 
