--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,7 @@ install:
 
       
   - appveyor PushArtifact appveyor.yml README.md -DeploymentName myArtifact
+  - appveyor PushArtifact README.md -DeploymentName myArtifact
 #build_script:
  # - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
   
