--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,10 @@ version: 1.0.{build}
 
 image: 
   #- Visual studio 2013
-  - Visual studio 2015
+  #- Visual studio 2015
   - Visual studio 2017
 platform:
-  - x86
+  #- x86
   - anyCPU
 
 #environment:
@@ -36,4 +36,12 @@ install:
   #force_update: true
   #on:
    # APPVEYOR_REPO_TAG: true
-
+deploy:
+  provider: Environment
+  name: test-agent-script
+  #auth_token:
+   # secure: YYaba3dPUneRem8KQzFCQCq7EmhJr9P8egf6Bp6OChFwdCkyQXDsL/ImEPe4rKHN
+  #artifact: myArtifact
+  #force_update: true
+  #on:
+   # APPVEYOR_REPO_TAG: true
