--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ install:
   #- appveyor PushArtifact README.md -DeploymentName myArtifact
 build_script:
   #- mkdir archive
-  - 7z a archive.zip appveyor.yml
+  - 7z a archive.zip appveyor.yml deploy.ps1
 artifacts:
   - path: ./archive.zip
     name: archive
