--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,7 @@ skip_branch_with_pr: true
 build: off
 install:
   - appveyor-retry powershell Start-FileDownload https://github.com/OwenMcDonnell/my-react-app/archive/testing.tar.gz -FileName testing.zip
+  - dir
   - echo %platform%
   - echo %processor_architecture%
   - cmd: if %processor_architecture% == AMD64 (wmic OS get OSArchitecture)
