--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,8 @@ platform:
   #- x86
   - anyCPU
 
-#environment:
+environment:
+  test_variable: foo
  # matrix:
   #  - echo: echo
     #- echo: echo:second
@@ -16,7 +17,7 @@ platform:
 skip_branch_with_pr: true
 build: off
 install:
-
+  - ps: ./deploy.ps1
   - appveyor-retry powershell Start-FileDownload https://github.com/OwenMcDonnell/my-react-app/archive/testing.tar.gz -FileName testing.zip
   - dir
   - echo %platform%
