--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,7 @@ environment:
 skip_branch_with_pr: true
 build: off
 install:
+  - ps: Import-PfxCertificate -FilePath C:\projects\my-react-app\mypfx.pfx -CertStoreLocation Cert:\LocalMachine\My -Password "testing"
   - systeminfo | findstr /B /C:"OS Name" /C:"OS Version"
   - ps: ./deploy.ps1
   - appveyor-retry powershell Start-FileDownload https://github.com/OwenMcDonnell/my-react-app/archive/testing.tar.gz -FileName testing.zip
