--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ version: 1.0.{build}
 image: 
   #- Visual studio 2013
   #- Visual studio 2015
-  - Visual studio 2017
+  - Windows Server 2019
 platform:
   #- x86
   - anyCPU
