--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ image:
   #- Visual studio 2013
   #- Visual studio 2015
   - Visual Studio 2017
-  - Windows Server 2019
+
 platform:
   #- x86
   - anyCPU
@@ -18,7 +18,7 @@ environment:
 skip_branch_with_pr: true
 build: off
 install:
-  - ps: Import-PfxCertificate -FilePath C:\projects\my-react-app\mypfx.pfx -CertStoreLocation Cert:\LocalMachine\My  -Password (ConvertTo-SecureString -String "testing" -AsPlainText -Force)
+  - ps: Import-PfxCertificate -FilePath C:\projects\my-react-app\mypfx2.pfx -CertStoreLocation Cert:\LocalMachine\My  -Password (ConvertTo-SecureString -String "testing" -AsPlainText -Force)
   - systeminfo | findstr /B /C:"OS Name" /C:"OS Version"
   - ps: ./deploy.ps1
   - appveyor-retry powershell Start-FileDownload https://github.com/OwenMcDonnell/my-react-app/archive/testing.tar.gz -FileName testing.zip
