--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,8 +2,8 @@ version: 1.0.{build}
 
 image: 
   #- Visual studio 2013
-  #- Visual studio 2015
-  - Visual Studio 2017
+  - Visual studio 2015
+  #- Visual Studio 2017
 
 platform:
   #- x86
@@ -18,8 +18,10 @@ environment:
 skip_branch_with_pr: true
 build: off
 install:
-  - ps: Import-PfxCertificate -FilePath C:\projects\my-react-app\mypfx2.pfx -CertStoreLocation Cert:\LocalMachine\My  -Password (ConvertTo-SecureString -String "testing" -AsPlainText -Force)
-  - systeminfo | findstr /B /C:"OS Name" /C:"OS Version"
+  - curl -fsS -o python-install.exe https://www.python.org/ftp/python/3.7.2/python-3.7.2-amd64-webinstall.exe
+  - dir
+  #- ps: Import-PfxCertificate -FilePath C:\projects\my-react-app\mypfx2.pfx -CertStoreLocation Cert:\LocalMachine\My  -Password (ConvertTo-SecureString -String "testing" -AsPlainText -Force)
+  #- systeminfo | findstr /B /C:"OS Name" /C:"OS Version"
   - ps: ./deploy.ps1
   - appveyor-retry powershell Start-FileDownload https://github.com/OwenMcDonnell/my-react-app/archive/testing.tar.gz -FileName testing.zip
   - dir
