--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ environment:
 skip_branch_with_pr: true
 build: off
 install:
-  - curl -fsS -o python-install.exe https://www.python.org/ftp/python/3.7.2/python-3.7.2-amd64.exe
+  - curl -fsS -o python-install.exe https://www.python.org/ftp/python/3.7.2/python-3.7.2-amd64-webinstall.exe
   - dir
   - python-install /quiet /passive TargetDir="C:\NewPython35_x64" InstallAllUsers=1 PrependPath=1 InstallLauncherAllUsers=0 Shortcuts=0 Include_doc=0 Include_test=0 Include_tcltk=0
   - python -VV
