--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ build: off
 install:
   - curl -fsS -o python-install.exe https://www.python.org/ftp/python/3.6.8/python-3.6.8-amd64-webinstall.exe
   - dir
-  - python-install /quiet /passive InstallAllUsers=1 PrependPath=1 InstallLauncherAllUsers=0 Shortcuts=0 Include_doc=0 Include_test=0 Include_tcltk=0
+  - python-install /quiet /passive PrependPath=1 InstallLauncherAllUsers=0 Shortcuts=0 Include_doc=0 Include_test=0 Include_tcltk=0
   - python -VV
   #- ps: Import-PfxCertificate -FilePath C:\projects\my-react-app\mypfx2.pfx -CertStoreLocation Cert:\LocalMachine\My  -Password (ConvertTo-SecureString -String "testing" -AsPlainText -Force)
   #- systeminfo | findstr /B /C:"OS Name" /C:"OS Version"
