--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,8 +21,8 @@ install:
   - C:\Users\appveyor\AppData\Local\"Package Cache"\{c0f1e976-f585-48f8-968d-48c870496d4e}\python-3.7.2-amd64.exe /uninstall /passive
   #- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
   - curl -fsS -o python-install.exe https://www.python.org/ftp/python/3.7.2/python-3.7.2-amd64.exe
-  - dir
-  - python-install /passive /quiet TargetDir="C:\Pyth" InstallAllUsers=1 PrependPath=1
+  - dir "C:/"
+  - python-install /passive /quiet InstallAllUsers=1 PrependPath=1
   - dir "C:/"
   - python -VV
   #- ps: Import-PfxCertificate -FilePath C:\projects\my-react-app\mypfx2.pfx -CertStoreLocation Cert:\LocalMachine\My  -Password (ConvertTo-SecureString -String "testing" -AsPlainText -Force)
