--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,9 +20,9 @@ build: off
 install:
   #- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
   - C:\Users\appveyor\AppData\Local\"Package Cache"\{c0f1e976-f585-48f8-968d-48c870496d4e}\python-3.7.2-amd64.exe /uninstall /passive
-  
+  - rd /s /q "C:/python37-x64"
   - curl -fsS -o python-install.exe https://www.python.org/ftp/python/3.7.2/python-3.7.2-amd64.exe
-  - dir "C:/python37-x64"
+  #- dir "C:/python37-x64"
   - python-install /passive /quiet targetdir="C:/python37-x64" InstallAllUsers=1 PrependPath=1
   - dir "C:/python37-x64"
   - python -VV
