--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,7 +51,7 @@ artifacts:
  # - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
   
 deploy:
-  release: testing
+  release: testing2
   description: 'Release description'
   provider: GitHub
   #auth_token:
