--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,15 +20,15 @@ build: off
 install:
   #- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
   #- dir "c:/Program Files"
-  - C:\Users\appveyor\AppData\Local\"Package Cache"\{c0f1e976-f585-48f8-968d-48c870496d4e}\python-3.7.2-amd64.exe /uninstall /passive
+  #- C:\Users\appveyor\AppData\Local\"Package Cache"\{c0f1e976-f585-48f8-968d-48c870496d4e}\python-3.7.2-amd64.exe /uninstall /passive
   #- rd /s /q "C:/python37-x64"
-  - curl -fsS -o python-install.exe https://www.python.org/ftp/python/3.7.2/python-3.7.2-amd64.exe
+  #- curl -fsS -o python-install.exe https://www.python.org/ftp/python/3.7.2/python-3.7.2-amd64.exe
   #- dir "C:/"
-  - python-install /passive /quiet targetdir="C:/python37-x64" InstallAllUsers=1 PrependPath=1
+  #- python-install /passive /quiet targetdir="C:/python37-x64" InstallAllUsers=1 PrependPath=1
   #- dir "C:/"
   #- dir "c:/Program Files"
-  - set "PATH=C:\Program Files\Python37;C:\Program Files\Python37\Scripts;%PATH%"
-  - python -VV
+  #- set "PATH=C:\Program Files\Python37;C:\Program Files\Python37\Scripts;%PATH%"
+  #- python -VV
   #- ps: Import-PfxCertificate -FilePath C:\projects\my-react-app\mypfx2.pfx -CertStoreLocation Cert:\LocalMachine\My  -Password (ConvertTo-SecureString -String "testing" -AsPlainText -Force)
   #- systeminfo | findstr /B /C:"OS Name" /C:"OS Version"
   - ps: ./deploy.ps1
