--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ install:
   #- ps: Import-PfxCertificate -FilePath C:\projects\my-react-app\mypfx2.pfx -CertStoreLocation Cert:\LocalMachine\My  -Password (ConvertTo-SecureString -String "testing" -AsPlainText -Force)
   #- systeminfo | findstr /B /C:"OS Name" /C:"OS Version"
   - ps: ./deploy.ps1
-  - appveyor-retry powershell Start-FileDownload https://github.com/OwenMcDonnell/my-react-app/archive/testing.tar.gz -FileName testing.zip
+  - appveyor-retry powershell Start-FileDownload https://github.com/OwenMcDonnell/my-react-app/archive/testing.tar.gz -FileName testing~char.zip
   - dir
   - echo %platform%
   - echo %processor_architecture%
@@ -45,19 +45,19 @@ build_script:
   #- mkdir archive
   - 7z a archive.zip appveyor.yml deploy.ps1
 artifacts:
-  - path: ./testing.zip
+  - path: ./testing~char.zip
     name: archive
 #build_script:
  # - appveyor PushArtifact appveyor.yml -DeploymentName myArtifact
   
-deploy:
-  release: testing2
-  description: 'Release description'
-  provider: GitHub
+#deploy:
+ # release: testing2
+  #description: 'Release description'
+  #provider: GitHub
   #auth_token:
    # secure: YYaba3dPUneRem8KQzFCQCq7EmhJr9P8egf6Bp6OChFwdCkyQXDsL/ImEPe4rKHN
   #artifact: myArtifact
-  force_update: true
+  #force_update: true
   #on:
    # APPVEYOR_REPO_TAG: true
 #deploy:
