--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,14 @@ environment:
 skip_branch_with_pr: true
 build: off
 install:
+  - ps: |
+      Write-Host "Uninstalling Yarn 1.2.1..."
+      (New-Object Net.WebClient).DownloadFile('https://github.com/yarnpkg/yarn/releases/download/v1.2.1/yarn-1.2.1.msi', "$env:temp\yarn-1.2.1.msi")
+      cmd /c start /wait msiexec.exe /x $env:temp\yarn-1.2.1.msi /quiet
+      Write-Host "Installing Yarn 0.24.6..."
+      (New-Object Net.WebClient).DownloadFile('https://github.com/yarnpkg/yarn/releases/download/v0.24.6/yarn-0.24.6.msi', "$env:temp\yarn-0.24.6.msi")
+      cmd /c start /wait msiexec.exe /i $env:temp\yarn-0.24.6.msi /quiet
+      yarn --version
   #- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
   #- dir "c:/Program Files"
   #- C:\Users\appveyor\AppData\Local\"Package Cache"\{c0f1e976-f585-48f8-968d-48c870496d4e}\python-3.7.2-amd64.exe /uninstall /passive
