--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,14 +18,14 @@ environment:
 skip_branch_with_pr: true
 build: off
 install:
-  - ps: |
-      Write-Host "Uninstalling Yarn 1.2.1..."
-      (New-Object Net.WebClient).DownloadFile('https://github.com/yarnpkg/yarn/releases/download/v1.9.4/yarn-1.9.4.msi', "$env:temp\yarn-1.2.1.msi")
-      cmd /c start /wait msiexec.exe /x $env:temp\yarn-1.2.1.msi /quiet
-      Write-Host "Installing Yarn 0.24.6..."
-      (New-Object Net.WebClient).DownloadFile('https://github.com/yarnpkg/yarn/releases/download/v1.15.2/yarn-1.15.2.msi', "$env:temp\yarn-0.24.6.msi")
-      cmd /c start /wait msiexec.exe /i $env:temp\yarn-0.24.6.msi /quiet
-      yarn --version
+  #- ps: |
+   #   Write-Host "Uninstalling Yarn 1.2.1..."
+    #  (New-Object Net.WebClient).DownloadFile('https://github.com/yarnpkg/yarn/releases/download/v1.9.4/yarn-1.9.4.msi', "$env:temp\yarn-1.2.1.msi")
+     # cmd /c start /wait msiexec.exe /x $env:temp\yarn-1.2.1.msi /quiet
+    #  Write-Host "Installing Yarn 0.24.6..."
+     # (New-Object Net.WebClient).DownloadFile('https://github.com/yarnpkg/yarn/releases/download/v1.15.2/yarn-1.15.2.msi', "$env:temp\yarn-0.24.6.msi")
+      #cmd /c start /wait msiexec.exe /i $env:temp\yarn-0.24.6.msi /quiet
+      #yarn --version
   #- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
   #- dir "c:/Program Files"
   #- C:\Users\appveyor\AppData\Local\"Package Cache"\{c0f1e976-f585-48f8-968d-48c870496d4e}\python-3.7.2-amd64.exe /uninstall /passive
@@ -39,7 +39,7 @@ install:
   #- python -VV
   #- ps: Import-PfxCertificate -FilePath C:\projects\my-react-app\mypfx2.pfx -CertStoreLocation Cert:\LocalMachine\My  -Password (ConvertTo-SecureString -String "testing" -AsPlainText -Force)
   #- systeminfo | findstr /B /C:"OS Name" /C:"OS Version"
-  - ps: ./deploy.ps1
+  #- ps: ./deploy.ps1
   - appveyor-retry powershell Start-FileDownload https://github.com/OwenMcDonnell/my-react-app/archive/testing.tar.gz -FileName testing-char.zip
   - dir
   - echo %platform%
@@ -51,7 +51,9 @@ install:
   #- appveyor PushArtifact README.md -DeploymentName myArtifact
 build_script:
   #- mkdir archive
-  - 7z a archive.zip appveyor.yml deploy.ps1
+  - cmd: >- 
+        7z a archive.zip appveyor.yml ^
+        deploy.ps1
 artifacts:
   - path: ./testing-char.zip
     name: archive
