--- a/appveyor.yml
+++ b/appveyor.yml
@@ -52,6 +52,7 @@ install:
 build_script:
   #- mkdir archive
   - cmd: 7z a archive.zip appveyor.yml
+         package.json
          deploy.ps1
 artifacts:
   - path: ./archive.zip
