--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,8 +51,7 @@ install:
   #- appveyor PushArtifact README.md -DeploymentName myArtifact
 build_script:
   #- mkdir archive
-  - cmd: >-
-         7z a archive.zip appveyor.yml
+  - cmd: 7z a archive.zip appveyor.yml
          package.json
          deploy.ps1
 artifacts:
