--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,10 +51,10 @@ install:
   #- appveyor PushArtifact README.md -DeploymentName myArtifact
 build_script:
   #- mkdir archive
-  - cmd: >-
-         7z a archive.zip appveyor.yml ^
-         package.json ^
-         deploy.ps1
+  #- cmd: >-
+   #      7z a archive.zip appveyor.yml ^
+    #     package.json ^
+     #    deploy.ps1
 artifacts:
   - path: ./archive.zip
     name: archive
