--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,8 +51,8 @@ install:
   #- appveyor PushArtifact README.md -DeploymentName myArtifact
 build_script:
   #- mkdir archive
-  - 7z a archive.zip appveyor.yml
-    package.json
+  - 7z a archive.zip appveyor.yml ^
+    package.json ^
     deploy.ps1
          
 artifacts:
