--- a/appveyor.yml
+++ b/appveyor.yml
@@ -52,10 +52,9 @@ install:
 build_script:
   - mkdir archive
 after_build:
-  - cmd: >-
-      7z a archive.zip appveyor.yml
-      package.json
-      deploy.ps1
+  - 7z a archive.zip appveyor.yml ^
+  - package.json ^
+  - deploy.ps1
          
 artifacts:
   - path: ./archive.zip
