--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ version: 1.0.{build}
 
 image: 
   #- Visual studio 2013
-  - Visual studio 2019 preview
+  - Windows server 2019
   #- Visual Studio 2017
 
 platform:
