--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,8 @@
 version: 1.0.{build}
 
 image: 
-  - Visual studio 2013
-  - Visual studio 2015
+  #- Visual studio 2013
+  #- Visual studio 2015
   - Visual studio 2017
 
 #environment:
