--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,7 @@ image:
   #- Visual studio 2013
   - Windows server 2019
   #- Visual Studio 2017
+
 platform:
   #- x86
   - anyCPU
@@ -54,8 +55,13 @@ after_build:
   - 7z a archive.zip appveyor.yml
     package.json
     deploy.ps1
-only_commits:
-  message: /build/         
+for:
+  -
+    branches:
+      only: 
+        - master
+    only_commits:
+      message: /build/         
 artifacts:
   - path: ./archive.zip
     name: archive
