--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,8 +2,8 @@ version: 1.0.{build}
 
 image: 
   #- Visual studio 2013
-  - Windows server 2019
-  #- Visual Studio 2017
+  #- Windows server 2019
+  - Visual Studio 2017
 
 platform:
   #- x86
@@ -18,7 +18,10 @@ environment:
 skip_branch_with_pr: true
 build: off
 install:
-  #- ps: |
+  - ps: |
+      "cd C:/Projects"
+      "$env:test = test_string"
+      ls
    #   Write-Host "Uninstalling Yarn 1.2.1..."
     #  (New-Object Net.WebClient).DownloadFile('https://github.com/yarnpkg/yarn/releases/download/v1.9.4/yarn-1.9.4.msi', "$env:temp\yarn-1.2.1.msi")
      # cmd /c start /wait msiexec.exe /x $env:temp\yarn-1.2.1.msi /quiet
