--- a/matrix.yml
+++ b/matrix.yml
@@ -40,8 +40,8 @@ for:
   -
      matrix:
        only:
-         - configuration: release
-           #my_var3: value3
+         - matrix1: matrix_value1
+
      branches:
        only: 
          - matrix-test
