--- a/matrix.yml
+++ b/matrix.yml
@@ -37,12 +37,24 @@ build_script:
   #   - 
 for:
 -
+ branches:
+   only: 
+     - master
+ matrix:
+   only:
+     - matrix1: matrix_value1
+     #- matrix2: matrix_value2
+
+    # install: 
+     #  - ps: write-host "install script"
+-
+ branches:
+   only: 
+     - master
  matrix:
    only:
      - matrix1: matrix_value1
      - matrix2: matrix_value2
- branches:
-   only: 
-     - branch-test
+
     # install: 
      #  - ps: write-host "install script"
