--- a/matrix.yml
+++ b/matrix.yml
@@ -10,11 +10,11 @@ environment:
   #artifact-name: archive
   matrix:
     - matrix1: matrix_value1
-      common: trueish
+      common: false
     - matrix2: matrix_value2
-      common: trueish
+      common: true
     - matrix3: matrix_value3
-      common: falseish
+      common: true
 stack: python 3.6
 #init: 
  # - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
@@ -62,7 +62,7 @@ for:
 -
   matrix:
     only:
-      - common: trueish
+      - common: false
   install:
     - ps: write_host "only common:true"
 
