--- a/appveyor.yml
+++ b/appveyor.yml
@@ -79,7 +79,7 @@ deploy:
   #artifact: myArtifact
   #force_update: true
   on:
-    appveyor_repo_tag: true
+    APPVEYOR_REPO_TAG: true
 #deploy:
  # provider: Environment
   #name: ProjectA
